Partially addresses issue 225 by updating the package scripts to increase the PermGen space.
We still need to look into the underlying issue.